--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
